--- a/pizza-oferte.html
+++ b/pizza-oferte.html
@@ -49,7 +49,7 @@
       			<img src="oferta3.png" alt="Livrare gratuita">
       		</figure>   
     	</div> 
- <p><b>Grabeste-te! Pizzeria Aldi te asteapta!</b></p>
+ <p><b>Grăbește-te! Pizzeria Aldi te așteaptă!</b></p>
     </section>  
     </body>
 </html>
