--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Aldi</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link href="contact.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="script.js" defer>
-
 	</script>
 	<link rel="shortcut icon" type="image/png" href="favicon.png" />
 </head>
@@ -26,9 +24,8 @@
 						<li><a href="#bauturi">Bauturi</a></li>
 					</ul>
 				</li>
-				<li><a href="joc.html">Castiga premii</a></li>
+				<li><a href="snake.html">Castiga premii</a></li>
 				<li><a href="contact.html">Contact</a>
-
 				</li>
 			</ul>
 		</nav>
