--- a/despre.html
+++ b/despre.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Aldi</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link href="despre.css" rel="stylesheet" type="text/css" />
 	<script type="text/javascript" src="despre.js">
 	</script>
@@ -26,7 +25,7 @@
 						<li><a href="#bauturi">Bauturi</a></li>
 					</ul>
 				</li>
-				<li><a href="joc.html"> Castiga premii</a></li>
+				<li><a href="snake.html"> Castiga premii</a></li>
 				<li><a href="contact.html">Contact</a>
 				</li>
 			</ul>
