--- a/pizza-meniu.html
+++ b/pizza-meniu.html
@@ -5,10 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Aldi</title>
-	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link href="pizza-meniu.css" rel="stylesheet" type="text/css" />
 	<script src="script.js">
-
 	</script>
 	<link rel="shortcut icon" type="image/png" href="favicon.png" />
 </head>
@@ -25,7 +23,7 @@
 					<li><a href="#bauturi">Bauturi</a></li>
 				</ul>
 			</li>
-			<li><a href="joc.html">Castiga premii</a></li>
+			<li><a href="snake.html">Castiga premii</a></li>
 			<li><a href="contact.html">Contact</a>
 			</li>
 		</ul>
