--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width">
 	<title>Aldi</title>
 	<link href="contact.css" rel="stylesheet" type="text/css" />
-	<script type="text/javascript" src="script.js" defer>
+	<script type="text/javascript" src="contact.js" defer>
 	</script>
 	<link rel="shortcut icon" type="image/png" href="favicon.png" />
 </head>
@@ -43,7 +43,7 @@
 			width="1000" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         
-      <div class="dateContact">
+      <div id="dateContact">
       <ul style="list-style-type:disc">
         <li>Târgoviște, Strada Locotenent Stancu Ion nr. 21</li>
         <li> 0372 707 070</li>
