--- a/despre.html
+++ b/despre.html
@@ -38,10 +38,7 @@
                 <button id="submit-name">Trimite</button>
                 <br>
             </div>
-           <p id="welcome-area" style="font-weight: bold; font-size: 25px; color: white; display: none; position: relative; margin-top:70px; left: 45em;">
-                <span id="welcome-text"></span>
-                <br>
-            </p>
+           <p id="welcome-area"></p>
 
   <section id="despre">
 	<h1><img id="logo" src="PizzeriaAldi.png" alt="logo"></h1>
