--- a/contact.html
+++ b/contact.html
@@ -44,12 +44,12 @@
         </div>
         
       <div id="dateContact">
-      <ul style="list-style-type:disc">
-        <li>Târgoviște, Strada Locotenent Stancu Ion nr. 21</li>
+      <ul class="list-data" style="list-style-type:disc">
+        <!-- <li>Târgoviște, Strada Locotenent Stancu Ion nr. 21</li>
         <li> 0372 707 070</li>
-        <li> 0732 425 138</li>
-		<br>
-      </ul>
+        <li> 0732 425 138</li> -->
+		<!-- <br> -->
+	</ul>
       <ul style="list-style-type:none">
         <li><i>Program de funcționare</i></li>
         <li>Luni - Joi: 07:30 - 01:00</li>
