--- a/formular.html
+++ b/formular.html
@@ -20,19 +20,19 @@
 		<form id="form" class="form">
 			<div class="form-control">
 				<label for="username">Username</label>
-			<input type="text" placeholder="aldicadiana" id="username" />
+			<input type="text" name="username" placeholder="aldicadiana" id="username" />
 
 			<small>Error message</small>
 		</div>
 		<div class="form-control">
 			<label for="username">Email</label>
-			<input type="email" placeholder="andreea.aldica@s.unibuc.ro" id="email" />
+			<input type="email" name="email" placeholder="andreea.aldica@s.unibuc.ro" id="email" />
 
 			<small>Error message</small>
 		</div>
 		<div class="form-control">
 			<label for="username">Parola</label>
-			<input type="password" placeholder="parola1" id="password"/>
+			<input type="password" name="parola" placeholder="parola1" id="password"/>
 			<small>Error message</small>
 		</div>
 		<div class="form-control">
